--- a/sidebars-dark.css
+++ b/sidebars-dark.css
@@ -12,8 +12,10 @@
  */
 
 @-moz-document
-	url(chrome://browser/content/bookmarks/bookmarksPanel.xul),
-	url(chrome://browser/content/history/history-panel.xul),
+	url(chrome://browser/content/bookmarks/bookmarksPanel.xul), /* <= FF61 */
+	url(chrome://browser/content/places/bookmarksSidebar.xul), /*  >= FF61 */
+	url(chrome://browser/content/history/history-panel.xul), /* <= FF61 */
+	url(chrome://browser/content/places/historySidebar.xul), /* >= FF61 */
 	url(chrome://browser/content/syncedtabs/sidebar.xhtml)
 {
 	image, *|img,
