update to YAML metadata syntax

--- a/context-menu-cleanup.css
+++ b/context-menu-cleanup.css
@@ -1,4 +1,4 @@
-/**
+/** ==UserStyle==
  * @name Context Menu Cleanup
  * @stylish-id 107171
  * @author Niklas Gollenstede
@@ -8,6 +8,7 @@
  *
  *     If you have any issues with this style, please open a ticket at https://github.com/NiklasGollenstede/stylish
  */
+
 
 @namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
 
